# pyqt-agent-infra

./: .gitignore  .pre-commit-config.yaml  .vagrant-ssh-config  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  RESULTS.md  Vagrantfile  hatch_build.py  provision.sh  pyproject.toml  pytest.ini  skills-lock.json
.agents/skills/: qt-app-interaction  qt-desktop-integration  qt-devtools-form-and-input
.agents/skills/building-multi-ui-apps/: SKILL.md
.agents/skills/building-qt-apps/: SKILL.md
.agents/skills/setting-up-logging/: SKILL.md
.agents/skills/setting-up-python-projects/: SKILL.md
.agents/skills/setting-up-shortcuts/: SKILL.md
.agents/skills/testing-python/: SKILL.md
.agents/skills/writing-python-code/: SKILL.md
.agents/skills/writing-python-scripts/: SKILL.md
.claude/agents/: orchestrator.md
.claude/skills/: building-multi-ui-apps  building-qt-apps  qt-dev-tools-setup  qt-devtools-app-interaction  qt-devtools-desktop-integration  qt-devtools-runtime-eval  qt-form-and-input  qt-runtime-eval  setting-up-python-projects  setting-up-shortcuts  writing-python-code
.kilocode/skills/: qt-devtools-setup  setting-up-logging  writing-python-scripts
.skills/install-qt-ai-dev-tools/: SKILL.md
.skills/qt-widget-patterns/: SKILL.md
app/: main.py
docs/: PHILOSOPHY.md  ROADMAP.md  TODO.md  agent-workflow.md  bridge-guide.md  subsystems-guide.md  test-failure-report.md  vm-setup-guide.md
docs/backlog/: docker-environment.md  vm_backends_research.md  wayland-support.md
docs/plans/: fix-plan-2026-04-05.md  test-cases-version-and-update.md
docs/real-apps-validation/: issues.md  process.md
docs/reports/: project-audit-2026-04-05.md
docs/reviews/: 2026-04-05-project-config-audit.md
docs/superpowers/plans/: 2026-04-04-phase1-cli-package.md  2026-04-05-bridge-eval.md  2026-04-05-cli-verbose-dryrun.md  2026-04-05-phase-4-5-vm-agent-integration.md  2026-04-05-phases-6-6.5-7.md  2026-04-05-skills-rewrite.md  2026-04-05-transparent-vm-proxy.md  2026-04-06-complex-widgets-snapshots-test-quality.md  2026-04-06-test-infra-improvements.md  2026-04-07-cli-docs-polish.md  2026-04-07-real-world-validation-round2.md  2026-04-07-round2-fixes.md  2026-04-08-provision-uv-tool-install.md  2026-04-08-validation-fixes-and-test-coverage.md  2026-04-08-vm-installation-logic.md
docs/superpowers/specs/: 2026-04-05-bridge-eval-design.md  2026-04-05-linux-subsystems-design.md  2026-04-05-skills-rewrite-design.md  2026-04-06-complex-widgets-snapshots-test-quality.md  2026-04-08-provision-uv-tool-install-design.md  2026-04-08-vm-installation-logic-design.md
docs/validation/: issues.md  process.md
docs/validation/round2/: keepassxc.md  qbittorrent.md  speedcrunch.md  vlc.md
scripts/: qt_pilot.py  screenshot.sh  setup.sh  vm-run.sh
skills/install-qt-ai-dev-tools/: SKILL.md
skills/qt-app-interaction/: SKILL.md
skills/qt-app-interaction/references/: bridge.md  recipes.md  troubleshooting.md  widget-roles.md
skills/qt-desktop-integration/: SKILL.md
skills/qt-dev-tools-setup/: SKILL.md
skills/qt-dev-tools-setup/references/: vm-troubleshooting.md
skills/qt-devtools-app-interaction/: SKILL.md
skills/qt-devtools-desktop-integration/: SKILL.md
skills/qt-devtools-form-and-input/: SKILL.md
skills/qt-devtools-runtime-eval/: SKILL.md
skills/qt-devtools-setup/: SKILL.md
skills/qt-form-and-input/: SKILL.md
skills/qt-inspect-interact-verify/: SKILL.md
skills/qt-runtime-eval/: SKILL.md
src/qt_ai_dev_tools/: __init__.py  __main__.py  __version__.py  _atspi.py  _env.py  _stability.py  _update_check.py  _vm_tool.py  cli.py  installer.py  interact.py  models.py  pilot.py  run.py  screenshot.py  snapshot.py  state.py
src/qt_ai_dev_tools/bridge/: __init__.py  _bootstrap.py  _client.py  _eval.py  _protocol.py  _qt_namespace.py  _server.py
src/qt_ai_dev_tools/logging/: __init__.py  logger_setup.py  non_log_stdout_output.py
src/qt_ai_dev_tools/subsystems/: __init__.py  _subprocess.py  audio.py  clipboard.py  file_dialog.py  models.py  notify.py  tray.py
src/qt_ai_dev_tools/vagrant/: __init__.py  vm.py  workspace.py
src/qt_ai_dev_tools/vagrant/templates/: Vagrantfile.j2  provision.sh.j2  screenshot.sh.j2  vm-run.sh.j2
tests/: AGENTS.md  CLAUDE.md  conftest.py  test_main.py
tests/apps/: audio_app.py  complex_app.py  file_dialog_app.py  stt_app.py  tray_app.py
tests/e2e/: conftest.py  test_audio_e2e.py  test_bridge_e2e.py  test_bridge_proxy.py  test_cli_commands_e2e.py  test_clipboard_e2e.py  test_complex_app_e2e.py  test_compound_e2e.py  test_file_dialog_e2e.py  test_stt_e2e.py  test_tray_e2e.py  test_visibility_e2e.py
tests/integration/: conftest.py  test_cli.py  test_cli_errors.py  test_cli_version.py  test_verbose_dryrun.py
tests/unit/: conftest.py  test_atspi.py  test_audio.py  test_bootstrap.py  test_bridge_client.py  test_bridge_eval.py  test_bridge_protocol.py  test_bridge_server.py  test_cli_defaults.py  test_cli_helpers.py  test_clipboard.py  test_env.py  test_file_dialog.py  test_installer.py  test_interact.py  test_isolation.py  test_logging.py  test_models.py  test_notify.py  test_pilot.py  test_qt_namespace.py  test_run.py  test_screenshot.py  test_snapshot.py  test_stability.py  test_subprocess_helpers.py  test_tray.py  test_update_check.py  test_version.py  test_vm.py  test_vm_tool.py  test_workspace.py
