[project]
name = "qt-ai-dev-tools"
description = "AI agent infrastructure for Qt/PySide apps — inspect, interact, screenshot via AT-SPI"
version = "0.2.0"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "colorlog>=6.10.1",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
]

# System deps (not pip-installable, installed via apt):
#   gir1.2-atspi-2.0, python3-gi  → gi.repository.Atspi
#   xdotool                        → X11 interaction
#   scrot                          → screenshots

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.6",
    "basedpyright>=1.34.0",
    "pre-commit",
    "poethepoet",
    "PySide6-Essentials>=6.8.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/qt_ai_dev_tools"]

[project.scripts]
qt-ai-dev-tools = "qt_ai_dev_tools.cli:app"

[project.urls]
Homepage = "https://github.com/quick-brown-foxxx/qt-ai-dev-tools"
Repository = "https://github.com/quick-brown-foxxx/qt-ai-dev-tools"
Documentation = "https://github.com/quick-brown-foxxx/qt-ai-dev-tools"

[tool.basedpyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportAny = "error"
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "error"
reportPrivateUsage = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportAttributeAccessIssue = "error"
exclude = [
    "**/__pycache__", ".venv", "venv", "build", "dist", "wrktrs",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "venv", ".venv", "*.egg", "*.egg-info", "**/dist", "**/build",
    "**/__pycache__", "wrktrs", ".git", ".pytest_cache",
]

[tool.ruff.lint]
extend-select = [
    "E", "F", "W", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4",
    "SIM", "PT", "PERF", "RUF",
]
ignore = ["S101", "RUF001", "RUF002", "RUF003", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT018", "S108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
qt_api = "pyside6"
timeout = 30
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
    "ignore:Atspi\\.Action\\.get_action_name is deprecated:DeprecationWarning",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require VM/display)",
    "e2e: End-to-end tests via transparent VM proxy (require running VM)",
    "xdist_group: Group tests on one xdist worker for serial execution",
]

[tool.poe.tasks]
test = "pytest"
app = "python -m qt_ai_dev_tools"

[tool.poe.tasks.lint_full]
shell = "basedpyright src/ && ruff check --fix . && ruff format ."
